# StarScript

./: .gitignore  CMakeLists.txt  Makefile  README.md  dev_notes.md  readme.md  starscript
core/: chunk.h  debug.c  debug.h  main.c  memory.h
src/: chunk.c  chunk.h  common.h  debug.c  main.c  memory.h  value.c  value.h  vm.c  vm.h
